--- a/style.css
+++ b/style.css
@@ -1,63 +1,63 @@
 *{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body{
-    background-color: white;
-    min-height: 100vh;
-    
-    justify-content: center;
+  background-color: white;
+  min-height: 100vh;
+  justify-content: center;
 }
 
 .p1{
-    background-color: aquamarine;
-    height: 500px;
-    width: 100%;
+  background-color: #4CB5F5;
+  height: 100vh;
+  width: 100%;
 }
 
 .p2{
-    background-color: lightcoral;
-    height: 500px;
-    width: 100%;
+  background-color: #FFBB00;
+  height: 100vh;
+  width: 100%;
 }
 
 .p3{
-    background-color: white;
-    height: 1500px;
-    width: 100%;
+  background-color: #8D230F;
+  height: 100vh;
+  width: 100%;
 }
 
-/* Style the navbar */
+.p4{
+  background-color: #000000;
+  height: 100vh;
+  width: 100%;
+}
+
 #navbar {
   overflow: hidden;
-  background-color: transparent;
+  background-color: #000000;
 }
 
-/* Navbar links */
 #navbar a {
   float: left;
   display: block;
-  color: black;
+  color: #FFFFFF;
   text-align: center;
-  padding: 14px;
+  padding: 25px;
   text-decoration: none;
 }
 
-/* Page content */
 .content {
-  padding: 16px;
+  padding: 15px;
 }
 
-/* The sticky class is added to the navbar with JS when it reaches its scroll position */
 .sticky {
   position: fixed;
   top: 0;
   width: 100%;
 }
 
-/* Add some top padding to the page content to prevent sudden quick movement (as the navigation bar gets a new position at the top of the page (position:fixed and top:0) */
 .sticky + .content {
   padding-top: 60px;
 }
