--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body{
 
 .p2{
   background-color: #FFBB00;
-  height: 100vh;
+  height: 200vh;
   width: 100%;
 }
 
@@ -37,10 +37,12 @@ body{
 #navbar {
   overflow: hidden;
   background-color: #000000;
+  text-align: center;
 }
 
 #navbar a {
-  float: left;
+  font-family: Tahoma, sans-serif;
+  float: right;
   display: block;
   color: #FFFFFF;
   text-align: center;
